--- a/sanbox_test.cbp
+++ b/sanbox_test.cbp
@@ -13,7 +13,12 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="/usr/include/mysql" />
 				</Compiler>
+				<Linker>
+					<Add library="libmysqlclient" />
+					<Add directory="/usr/lib/mysql" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/sanbox_test" prefix_auto="1" extension_auto="1" />
@@ -89,6 +94,7 @@
 		<Extensions>
 			<code_completion />
 			<debugger />
+			<envvars />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
