--- a/config.ini
+++ b/config.ini
@@ -12,3 +12,6 @@ in_data_dir_path = /home/shiwei/myoj/indata/
 
 out_data_dir_path = /home/shiwei/myoj/outdata/
 
+javalib_dir_path = /home/shiwei/myoj/executer/java_sandbox/
+
+javasandbox_path = /home/shiwei/myoj/executer/java_sandbox/JavaSandbox.jar
